- Fixed item disappearance with items not being properly quick deposited into TiCon multiblocks (fix should be good for other modded inventories as well).
- Fixed dupe where you could get multiple upgrades returned when applying large amounts at once to a backpack.
------------------------------------------------------
Version 1.10.2 - 2.2.19
------------------------------------------------------
Additions
- None

Changes
- No longer able to right click from any inventory to open backpacks, just from other backpacks or your main 'e' inventory.

Bug Fixes
- Fixed error with block placing causing issues.
- Fixed duplication/desync errors when opening backpacks directly from other inventories.
------------------------------------------------------
Version 1.10.2 - 2.2.18
------------------------------------------------------
Additions
- Changed how the restocking upgrade works internally, allowing for mods like BetterBuildersWands and NotEnoughWands to be compatible.
- Added rendering of the backpacks in multiplayer (you can now see other player's equipped backpacks).
- Added ability to use the quick deposit upgrades with equipped backpacks.
    - Just shift right click an inventory with an empty hand, and if you are wearing a backpack with the quick deposit upgrade and it has items to deposit it will do so!

Changes
- None

Bug Fixes
- Fixed forge > 2120 not being explicitly required.
------------------------------------------------------
Version 1.10.2 - 2.2.17
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Re-add mod load order to be after JEI to fix random client crash.
------------------------------------------------------
Version 1.10.2 - 2.2.16
------------------------------------------------------
Additions
- None

Changes
- Full release (about time :D)

Bug Fixes
- Fix dupe bug when double clicking an item stack with the configurable inventory open.
- Fix crash when JEI is not used.