@@ -11,6 +11,7 @@ Bug Fixes
 - Fixed item not appearing in world correctly when shift-right clicking an inventory with a placable item conflicting with an equipped backpack with the quick deposit filter.
 - Fixed item disappearance with items not being properly quick deposited into TiCon multiblocks (fix should be good for other modded inventories as well).
 - Fixed dupe where you could get multiple upgrades returned when applying large amounts at once to a backpack.
+- Fixed item loss when using Inventory Sorter to move items to and from ghost/filter slots by disabling scroll wheel entirely in that GUI.
 ------------------------------------------------------
 Version 1.10.2 - 2.2.19
 ------------------------------------------------------
